# patze-control

./: .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-ci.yml  release.yml  workflow-lint.yml
apps/api-server/: .env.example  package.json  tsconfig.json
apps/api-server/src/: bridge-command-store.ts  bridge-setup-manager.test.ts  bridge-setup-manager.ts  cli-tasks.ts  index.ts  openclaw-command-queue.test.ts  openclaw-command-queue.ts  openclaw-config-reader.test.ts  openclaw-config-reader.ts  openclaw-install-security.test.ts  openclaw-install-security.ts  task-executor.ts  (+6 more)
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: DESKTOP_RELEASE_CHECKLIST.md  PR1_ACCEPTANCE_TEST_PLAN.md  SMART_OPENCLAW_FLEET_ARCHITECTURE_V2.md  TELEMETRY_V1_SPEC.md  telemetry-envelope.telemetry.v1.schema.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  update_diff.json  update_report.md
scripts/: build-sidecar.sh  connect-vps.sh  install-bridge.sh  smoke-openclaw-flow.mjs  smoke-openclaw-install-flow.mjs  smoke-ui-multi-target-flow.mjs  smoke-ui-openclaw-flow.mjs  smoke-ui-target-edit-flow.mjs  smoke-ui-terminal-guard-flow.mjs  smoke-utils.mjs
(+150 files in other folders)
